--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
@@ -278,7 +278,7 @@
 		<div class="top-footer">
 			<div class="footer_logo">
 				<img
-					 src="./assets//icons/Link - logo → logo@2x-white-1.webp.svg"
+					 src="./assets/icons/Link%20-%20logo%20ΓåÆ%20logo@2x-white-1.webp.svg"
 					 alt="Logo"
 				/>
 				<span class="footer_social_icon">
@@ -324,7 +324,7 @@
 			<div class="contact_footer">
 				<h3>Aloqa</h3>
 				<span>
-              <img src="./assets//icons/phone_footer.svg" alt="Phone"/>
+              <img src="./assets/icons/phone_footer.svg" alt="Phone"/>
               <p>666 888 0000</p>
             </span>
 				<span>
