--- a/contact.html
+++ b/contact.html
@@ -274,7 +274,7 @@
 		<div class="top-footer">
 			<div class="footer_logo">
 				<img
-					 src="./assets//icons/Link - logo → logo@2x-white-1.webp.svg"
+					 src="./assets/icons/Link%20-%20logo%20ΓåÆ%20logo@2x-white-1.webp.svg"
 					 alt="Logo"
 				/>
 				<span class="footer_social_icon">
@@ -320,7 +320,7 @@
 			<div class="contact_footer">
 				<h3>Aloqa</h3>
 				<span>
-              <img src="./assets//icons/phone_footer.svg" alt="Phone"/>
+              <img src="./assets/icons/phone_footer.svg" alt="Phone"/>
               <p>666 888 0000</p>
             </span>
 				<span>
