--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </h1>
             <div>
                 <h2>Bizning videoni tomosha qiling</h2>
-                <a href="https://www.youtube.com/watch?v=hWkYtZxpQUo">
+                <a href="https://www.youtube.com/watch?v=s33TCqowd-c&pp=ygUNZGVocW9uIGJvem9yaQ%3D%3D">
               <span class="animation_play">
                 <img src="./assets/icons/play.svg" alt="Oynatish"/>
               </span>
@@ -772,7 +772,7 @@
         <div class="top-footer">
             <div class="footer_logo">
                 <img
-                        src="./assets//icons/Link - logo → logo@2x-white-1.webp.svg"
+                        src="./assets/icons/Link%20-%20logo%20ΓåÆ%20logo@2x-white-1.webp.svg"
                         alt="Logo"
                 />
                 <span class="footer_social_icon">
@@ -820,7 +820,7 @@
             <div class="contact_footer">
                 <h3>Aloqa</h3>
                 <span>
-              <img src="./assets//icons/phone_footer.svg" alt="Phone"/>
+              <img src="./assets/icons/phone_footer.svg" alt="Phone"/>
               <p>666 888 0000</p>
             </span>
                 <span>
