--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                         <div class="blog_details">
                             <div class="blog_user">
                                 <img src="./images/icons/user.png" alt="" class="blog_user_img"/>
-                                <p class="blog_user_name">Jon Do</p>
+                                <p class="blog_user_name">Jon bobo</p>
                             </div>
                             <div class="blog_comments">
                                 <img src="./images/icons/comment.png" alt="" class="blog_comment_icon"/>
@@ -722,7 +722,7 @@
                         <div class="blog_details">
                             <div class="blog_user">
                                 <img src="./images/icons/user.png" alt="" class="blog_user_img"/>
-                                <p class="blog_user_name">Jeyn Smit</p>
+                                <p class="blog_user_name">Jeyna rasulova</p>
                             </div>
                             <div class="blog_comments">
                                 <img src="./images/icons/comment.png" alt="" class="blog_comment_icon"/>
@@ -746,7 +746,7 @@
                         <div class="blog_details">
                             <div class="blog_user">
                                 <img src="./images/icons/user.png" alt="" class="blog_user_img"/>
-                                <p class="blog_user_name">Robert Li</p>
+                                <p class="blog_user_name">Robert Lufullaev</p>
                             </div>
                             <div class="blog_comments">
                                 <img src="./images/icons/comment.png" alt="" class="blog_comment_icon"/>
